# kiro-studio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yaml
kiro-audio/: Cargo.toml
kiro-audio-driver/: Cargo.toml
kiro-audio-engine/: Cargo.toml  README.md
kiro-audio-engine/src/: lib.rs  mod.rs
kiro-audio-engine/src/controller/: controller.rs
kiro-audio-engine/src/data/: mod.rs  queue.rs
kiro-audio-engine/src/data/incubating/: inbox.rs  inbox_v1.rs  slab_pool.rs  slab_queue.rs
kiro-audio-engine/src/events/: events_buffer.rs  mod.rs  queue.rs
kiro-audio-engine/src/events/bplus_tree/: internal_node.rs  leaf_node.rs  mod.rs  sorted_map.rs  tree.rs
kiro-audio-engine/src/time/: clock.rs
kiro-audio-graph/: Cargo.toml
kiro-audio/src/: config.rs  cpal.rs  lib.rs
kiro-dsp/: Cargo.toml
kiro-dsp/src/: float.rs  lib.rs  smoother.rs
kiro-dsp/src/filters/: freq_control.rs  q_control.rs
kiro-engine/: Cargo.toml
kiro-engine/src/: config.rs  engine.rs  error.rs  key_store.rs  lib.rs  messages.rs  module.rs  node.rs  ports.rs
kiro-engine/src/audio/: buffer.rs
kiro-engine/src/callback/: plan.rs  renderer.rs
kiro-engine/src/events/: buffer.rs  (+2 more)
kiro-midi/: Cargo.toml  README.md
kiro-midi-core/: Cargo.toml
kiro-midi/examples/: receive.rs
kiro-midi/src/: endpoints.rs  event.rs  filter.rs  input_config.rs  input_handler.rs  input_info.rs  lib.rs  main.rs  note_freq.rs  source_match.rs
kiro-midi/src/drivers/: mod.rs
kiro-midi/src/drivers/coremidi/: driver.rs  endpoints.rs  mod.rs  timestamp.rs
kiro-midi/src/protocol/: decoder.rs  mod.rs  translate.rs
kiro-midi/src/protocol/codec/: channel_voice.rs  mod.rs  system_common.rs  system_exclusive.rs  utility.rs
kiro-midi/src/protocol/messages/: channel_voice.rs  mod.rs  system_common.rs  system_exclusive.rs  utility.rs
kiro-studio/: Cargo.toml  README.md
kiro-studio/src/: errors.rs  lib.rs  studio.rs
kiro-studio/src/config/: midi.rs  mod.rs
kiro-studio/src/platform/: macos.rs
kiro-synth/: Cargo.toml
kiro-synth/src/: config.rs  engine.rs  lib.rs  main.rs
kiro-synth/src/graph/: mod.rs  voice.rs
kiro-time/: Cargo.toml
kiro-time/src/: bars.rs  clock.rs  signature.rs  tempo.rs  ticks.rs
(+36 files in other folders)
