[workspace]
members = [
  "kiro-audio-driver",
  "kiro-audio-graph",
  "kiro-audio-engine",
  # "kiro-audio-synth",
  "kiro-midi-core",
  # "kiro-synth-dsp",
]

exclude = [
    "incubator/kiro-audio-dsp",
    "incubator/kiro-audio-lens",
    "incubator/kiro-audio-engine-safe",
    "incubator/kiro-audio-synth-safe",
    "kiro-audio-synth",
    "kiro-synth-dsp"
]

[profile.dev]
split-debuginfo = "unpacked"
