[package]
name = "kiro-synth"
version = "0.1.0"
authors = ["Christian Perez Llamas"]
edition = "2021"

[build-dependencies]


[dependencies]
thiserror = "~1.0"
anyhow = "~1.0"
ringbuf = "~0.2"

kiro-time = { path = "../kiro-time" }
kiro-midi = { path = "../kiro-midi" }
kiro-audio = { path = "../kiro-audio" }
kiro-engine = { path = "../kiro-engine" }
kiro-dsp = { path = "../kiro-dsp" }
